--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite: ^2.0.1
-  http: ^0.13.0+4
+  http: ^0.13.4
+  sqflite: ^2.0.2+1
   intl: ^0.17.0
-  path: ^1.8.0
-  workmanager: ^0.4.1
   table_sticky_headers: ^2.0.0
-  flutter_svg: ^1.0.3
-  syncfusion_flutter_calendar: ^19.4.56
+  syncfusion_flutter_calendar: ^20.1.50
+
+ 
 
 dev_dependencies:
   flutter_test:
